--- a/app/src/main/res/values/strings_international.xml
+++ b/app/src/main/res/values/strings_international.xml
@@ -15,7 +15,7 @@
 	limitations under the License.
  -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-	<string name="app_name">AndStatus</string>
+	<string name="app_name">AndStatus With Passwear</string>
     <string name="appwidget_new_home_format">{0}</string>
     <string name="appwidget_new_directmessage_format">{0}</string>
     <string name="appwidget_new_mention_format">{0}</string>
